tests/semantic_errors/test27_3.tl
require "ifj21"

function main()
    func()
end

function func() end

main()
